--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.ryan.soundcloudalarmclock"
+        applicationId "com.example.loginscreen"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
