--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions{
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile files('src/main/res/libs/soundcloud-0.1.5-jar-with-dependencies.jar')
+    compile 'com.soundcloud:java-api-wrapper:1.3.1'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
